--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Base URL for your products API (trailing slash recommended)
 # In development you can set this in .env.local which is git-ignored
 VITE_API_BASE_URL=http://localhost:7071/api/
-
+VITE_LOANS_API_BASE_URL=http://localhost:7071/api/loans # Dummy link for workflow test change
 # Auth0 configuration
 # Create an Auth0 Application (Single Page App) and API (if calling a protected backend)
 # Then set the values below. Audience is optional unless your API requires it.
