Telemetry and tests added

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ VITE_LOANS_API_BASE_URL=http://localhost:7071/api/loans # Dummy link for workflo
 VITE_AUTH0_DOMAIN=your-tenant.eu.auth0.com
 VITE_AUTH0_CLIENT_ID=your-client-id
 VITE_AUTH0_AUDIENCE=https://your-api-identifier
+# App Insights configuration
+VITE_APPINSIGHTS_CONNECTION_STRING=your-app-insights-connection-string
