--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,6 +21,7 @@ jobs:
       VITE_AUTH0_DOMAIN: loanapp-dev-nh66.uk.auth0.com
       VITE_AUTH0_CLIENT_ID: eBOGo7xGVMyBcD2mNYHWGpcqcoHPWSeC
       VITE_AUTH0_AUDIENCE: https://loan/api
+      VITE_APPINSIGHTS_CONNECTION_STRING: InstrumentationKey=0fc43334-0025-4bec-bb56-fb8c858283f7;IngestionEndpoint=https://uksouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://uksouth.livediagnostics.monitor.azure.com/;ApplicationId=0f5f51fb-8120-41f2-83af-87497ce66106
 
     steps:
       - name: Checkout code
