--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.5.0",
+    "@microsoft/applicationinsights-web": "^3.3.10",
     "node-fetch": "^2.7.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
